; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192su/extr_r8192U_core.c_rtl8192_handle_assoc_response.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192su/extr_r8192U_core.c_rtl8192_handle_assoc_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ieee80211_assoc_response_frame = type { i32 }
%struct.ieee80211_network = type { i32 }
%struct.r8192_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.ieee80211_assoc_response_frame*, %struct.ieee80211_network*)* @rtl8192_handle_assoc_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtl8192_handle_assoc_response(%struct.net_device* %0, %struct.ieee80211_assoc_response_frame* %1, %struct.ieee80211_network* %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.ieee80211_assoc_response_frame*, align 8
  %6 = alloca %struct.ieee80211_network*, align 8
  %7 = alloca %struct.r8192_priv*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store %struct.ieee80211_assoc_response_frame* %1, %struct.ieee80211_assoc_response_frame** %5, align 8
  store %struct.ieee80211_network* %2, %struct.ieee80211_network** %6, align 8
  %8 = load %struct.net_device*, %struct.net_device** %4, align 8
  %9 = call %struct.r8192_priv* @ieee80211_priv(%struct.net_device* %8)
  store %struct.r8192_priv* %9, %struct.r8192_priv** %7, align 8
  %10 = load %struct.r8192_priv*, %struct.r8192_priv** %7, align 8
  %11 = load %struct.ieee80211_network*, %struct.ieee80211_network** %6, align 8
  %12 = call i32 @rtl8192_qos_association_resp(%struct.r8192_priv* %10, %struct.ieee80211_network* %11)
  ret i32 0
}

declare dso_local %struct.r8192_priv* @ieee80211_priv(%struct.net_device*) #1

declare dso_local i32 @rtl8192_qos_association_resp(%struct.r8192_priv*, %struct.ieee80211_network*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
